[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onethingai-llmsdk"
version = "1.0.0"
description = "OneThing AI LLM SDK - Text, Image and Video Generation with unified v2 API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OneThing AI", email = "sdk@onethingai.com"}
]
keywords = ["ai", "openai", "image-generation", "video-generation", "llm", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.25.0", 
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/onething_llm"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
